[package]
name = "agrame"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yewdux = "0.10"
gloo = "0.11.0"
gloo-console = "0.3.0"
nom = "7.1.3"
web-sys = "0.3.66"
id-arena = "2.2.1"
rand = "0.8.5"

[lib]
name = "agrame"
path = "src/agrame/lib.rs"

[[bin]]
name = "agramex"

